[gd_scene load_steps=24 format=2]

[ext_resource path="res://actor/enemies/zombie1.gd" type="Script" id=1]
[ext_resource path="res://actor/animations.gd" type="Script" id=2]
[ext_resource path="res://body.png" type="Texture" id=3]
[ext_resource path="res://actor/state_machine/state_machine.tscn" type="PackedScene" id=4]
[ext_resource path="res://actor/state_machine/state/idle.gd" type="Script" id=5]
[ext_resource path="res://actor/state_machine/state/walk.gd" type="Script" id=6]
[ext_resource path="res://actor/state_machine/state/jump.gd" type="Script" id=7]
[ext_resource path="res://actor/state_machine/state/fall.gd" type="Script" id=8]
[ext_resource path="res://actor/state_machine/state/player_attack.gd" type="Script" id=9]
[ext_resource path="res://actor/input_state_manage.tscn" type="PackedScene" id=10]
[ext_resource path="res://actor/detect_info.gd" type="Script" id=11]
[ext_resource path="res://actor/ai/ai_base.gd" type="Script" id=12]
[ext_resource path="res://actor/enemies/rigidBody.gd" type="Script" id=13]
[ext_resource path="res://icon.png" type="Texture" id=14]

[sub_resource type="Animation" id=1]

resource_name = "idle"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("leg2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.149506, -85 ), Vector2( 0.149506, -85 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("leg2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -9.53674e-006, -9.53674e-006 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("leg1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.90735e-006, -85.0204 ), Vector2( 1.90735e-006, -85.0204 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("leg1:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 9.53674e-006, 9.53674e-006 ]
}

[sub_resource type="Animation" id=2]

resource_name = "jump"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("leg2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.149506, -85 ), Vector2( 0.149506, -85 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("leg2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -9.53674e-006, -30.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("leg1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.90735e-006, -85.0204 ), Vector2( 1.90735e-006, -85.0204 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("leg1:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 9.53674e-006, 30.0 ]
}

[sub_resource type="Animation" id=3]

resource_name = "walk"
length = 0.8
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("leg2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.599952 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.149506, -85 ), Vector2( 0.149506, -85 ), Vector2( 0.149506, -85 ), Vector2( 0.149506, -85 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("leg2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.599952 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -9.53674e-006, 30.0, -9.53674e-006, -30.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("leg1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.599952 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.90735e-006, -85.0204 ), Vector2( 1.90735e-006, -85.0204 ), Vector2( 1.90735e-006, -85.0204 ), Vector2( 1.90735e-006, -85.0204 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("leg1:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.599952 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 9.53674e-006, -30.0, 9.53674e-006, 30.0 ]
}

[sub_resource type="CapsuleShape2D" id=4]

height = 26.66

[sub_resource type="RectangleShape2D" id=5]

extents = Vector2( 10, 3.33 )

[sub_resource type="CircleShape2D" id=6]


[sub_resource type="RectangleShape2D" id=7]

extents = Vector2( 20, 4 )

[sub_resource type="RectangleShape2D" id=8]

extents = Vector2( 13.1299, 19.11 )

[sub_resource type="RectangleShape2D" id=9]

extents = Vector2( 19.416, 50 )

[node name="zombie1" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 1 )

[node name="animations" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )
actor_path = NodePath("")

[node name="animation_action" type="AnimationPlayer" parent="animations"]
anims/idle = SubResource( 1 )
anims/jump = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="leg1" type="Sprite" parent="animations"]
self_modulate = Color( 0.207843, 0.690196, 0.0901961, 1 )
position = Vector2( 1.90735e-006, -85.0204 )
rotation = 0.428687
scale = Vector2( 0.697674, 2.03795 )
texture = ExtResource( 3 )
offset = Vector2( -0.157, 18.852 )

[node name="leg2" type="Sprite" parent="animations"]
self_modulate = Color( 0.207843, 0.690196, 0.0901961, 1 )
position = Vector2( 0.149506, -85 )
rotation = -0.428687
scale = Vector2( 0.697674, 2.04444 )
texture = ExtResource( 3 )
offset = Vector2( 0.331, 18.789 )

[node name="state_machine" parent="." instance=ExtResource( 4 )]
actor = NodePath(".")

[node name="idle" type="Node" parent="state_machine"]
script = ExtResource( 5 )

[node name="walk" type="Node" parent="state_machine"]
script = ExtResource( 6 )

[node name="jump" type="Node" parent="state_machine"]
script = ExtResource( 7 )
jump_height = 1000

[node name="fall" type="Node" parent="state_machine"]
script = ExtResource( 8 )

[node name="attack" type="Node" parent="state_machine"]
script = ExtResource( 9 )

[node name="input_state_manage" parent="." instance=ExtResource( 10 )]

[node name="detect_info" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 11 )

[node name="nor_wander" type="Node2D" parent="detect_info"]

[node name="rayc_floor_left" type="RayCast2D" parent="detect_info/nor_wander"]
position = Vector2( -7.70013, -9.24017 )
enabled = true
cast_to = Vector2( 0, 15.42 )

[node name="rayc_wall_right" type="RayCast2D" parent="detect_info/nor_wander"]
position = Vector2( 8.94327, -8.96278 )
enabled = true
cast_to = Vector2( 15, 0 )

[node name="rayc_floor_right" type="RayCast2D" parent="detect_info/nor_wander"]
position = Vector2( 8.94327, -8.408 )
enabled = true
cast_to = Vector2( 0, 15.42 )

[node name="rayc_wall_left" type="RayCast2D" parent="detect_info/nor_wander"]
position = Vector2( -8.25491, -8.96278 )
enabled = true
cast_to = Vector2( -15, 0 )

[node name="ai" type="Node" parent="."]
script = ExtResource( 12 )
actor_path = NodePath("..")

[node name="body_rigid" type="RigidBody2D" parent="."]
editor/display_folded = true
position = Vector2( 0, -62.33 )
collision_layer = 16
collision_mask = 5
custom_integrator = true
continuous_cd = 2
script = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="body_rigid"]
self_modulate = Color( 0.137255, 0.737255, 0.101961, 1 )
scale = Vector2( 0.44, 1 )
texture = ExtResource( 3 )

[node name="body_shape" type="CollisionShape2D" parent="body_rigid"]
position = Vector2( 0, -0.21 )
shape = SubResource( 4 )

[node name="neck_shape" type="CollisionShape2D" parent="body_rigid"]
position = Vector2( 0, -22.57 )
shape = SubResource( 5 )

[node name="head_rigid" type="RigidBody2D" parent="."]
editor/display_folded = true
position = Vector2( 0.584, -99.48 )
collision_layer = 16
collision_mask = 17
custom_integrator = true
continuous_cd = 2
script = ExtResource( 13 )

[node name="icon" type="Sprite" parent="head_rigid"]
self_modulate = Color( 0.27451, 0.796078, 0.129412, 1 )
position = Vector2( 0, 1.93 )
scale = Vector2( 0.421875, 0.421875 )
texture = ExtResource( 14 )

[node name="hand_shape" type="CollisionShape2D" parent="head_rigid"]
position = Vector2( 0, 1.27 )
shape = SubResource( 6 )

[node name="hand_rigid" type="RigidBody2D" parent="."]
editor/display_folded = true
position = Vector2( 20, -72 )
collision_layer = 0
collision_mask = 5
continuous_cd = 2
script = ExtResource( 13 )

[node name="hand_shape" type="CollisionShape2D" parent="hand_rigid"]
shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="hand_rigid"]
self_modulate = Color( 0.219608, 0.447059, 0.168627, 1 )
scale = Vector2( 1, 0.17 )
texture = ExtResource( 3 )

[node name="pinJoint_head" type="PinJoint2D" parent="."]
position = Vector2( 0, -86 )
node_a = NodePath("../body_rigid")
node_b = NodePath("../head_rigid")
disable_collision = false

[node name="pinJoint_hand" type="PinJoint2D" parent="."]
position = Vector2( 0, -72 )
node_a = NodePath("../body_rigid")
node_b = NodePath("../hand_rigid")
disable_collision = false

[node name="pinJoint_body" type="PinJoint2D" parent="."]
position = Vector2( 0, -36 )
node_a = NodePath("..")
node_b = NodePath("../body_rigid")
disable_collision = false

[node name="body_shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -19.48 )
shape = SubResource( 8 )

[node name="trace_timer" type="Timer" parent="."]
autostart = true

[node name="free_timer" type="Timer" parent="."]

[node name="attack_area" type="Area2D" parent="."]
editor/display_folded = true
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
position = Vector2( 0.583977, -54 )
shape = SubResource( 9 )

[node name="attack_timer" type="Timer" parent="."]

[connection signal="timeout" from="trace_timer" to="." method="_on_trace_timer_timeout"]
[connection signal="timeout" from="free_timer" to="." method="_on_free_timer_timeout"]
[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="attack_area" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
